Chore/fix apis (#141)
* fix: remove sourcePort default value mapping that dropped messages in workflows

The SessionMapper was applying a default value of "default" to edges with
null sourcePort during DTO-to-domain conversion. This caused all messages
from trigger nodes (which have null sourcePort) to be filtered out during
workflow execution because the edge routing filter expected messages to carry
a "default" sourcePort.

The documented behavior states that null sourcePort means "route all messages",
so the default value should not be applied. Messages with null sourcePort will
now pass through the filter correctly.

This fixes the issue where processor nodes received empty message streams and
completed immediately without executing their business logic.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>

* feat: restore default sourcePort behavior with trigger plugin updates

Restore the 'default' sourcePort mapping that provides a sensible default for
edges without explicit source ports. This allows users to:
- Omit sourcePort when edges should route all messages (will default to 'default')
- Explicitly set sourcePort in edge definitions for custom routing

Update all trigger plugins (ManualTrigger, ApiTriggerPlugin, ConfigVariableSource)
to emit messages with sourcePort='default' so they match the default edge filter
behavior.

This approach maintains backward compatibility while supporting:
1. Default behavior: edges without sourcePort get 'default' and work with triggers
2. Custom routing: users can explicitly set sourcePort for multi-output scenarios

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>

* fix: make /api/workflow/start return immediately without waiting for execution

Changed the workflow execution to run asynchronously so the endpoint returns
immediately with the execution ID instead of waiting for the entire workflow
to complete. Execution now runs on the boundedElastic scheduler and errors
are logged asynchronously.

Co-Autho