@@ -47,6 +47,7 @@ import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Map;
 import java.util.UUID;
+import lombok.NoArgsConstructor;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -63,6 +64,17 @@ import reactor.util.context.Context;
 
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
+@NoArgsConstructor
+@SuppressWarnings({
+  "PMD.ExcessiveImports",
+  "PMD.TooManyStaticImports",
+  "PMD.CommentRequired",
+  "PMD.TooManyMethods",
+  "PMD.AvoidDuplicateLiterals",
+  "PMD.UseShortArrayInitializer",
+  "PMD.ShortVariable",
+  "PMD.UseVarargs"
+})
 class TerminalNodeAssemblerStrategyTest {
 
   @Mock private TaskTrackerService tracker;
@@ -139,7 +151,7 @@ class TerminalNodeAssemblerStrategyTest {
 
     final WorkflowNode node = new WorkflowNode(NODE_ID, "terminal", Map.of());
     final Flux<Message<?>> parentStream = Flux.just(msg);
-    final AssemblyContext context = buildContext(NODE_ID, parentStream);
+    final AssemblyContext context = buildContext(parentStream);
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(parentStream);
@@ -160,7 +172,7 @@ class TerminalNodeAssemblerStrategyTest {
     when(terminal.isBlocking()).thenReturn(false);
 
     final WorkflowNode node = new WorkflowNode(NODE_ID, "terminal", Map.of());
-    final AssemblyContext context = buildContext(NODE_ID, Flux.just(msg));
+    final AssemblyContext context = buildContext(Flux.just(msg));
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(Flux.just(msg));
@@ -170,7 +182,7 @@ class TerminalNodeAssemblerStrategyTest {
             node, terminal, Duration.ofSeconds(5), 0, 1024, new ParentEdgeInfo[0]);
     assembler.assemble(context);
 
-    StepVerifier.create(context.terminals().get(0)).verifyComplete();
+    StepVerifier.create(context.terminals().getFirst()).verifyComplete();
 
     verify(tracker, atLeastOnce())
         .emitTaskStatusEvent(eq(EXECUTION_ID), eq(NODE_ID), anyString(), anyString(), any());
@@ -185,7 +197,7 @@ class TerminalNodeAssemblerStrategyTest {
 
     final WorkflowNode node = new WorkflowNode(NODE_ID, "terminal", Map.of());
     final Message<?> msg = DefaultMessage.create(UUID.randomUUID(), "data");
-    final AssemblyContext context = buildContext(NODE_ID, Flux.just(msg));
+    final AssemblyContext context = buildContext(Flux.just(msg));
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(Flux.just(msg));
@@ -195,7 +207,7 @@ class TerminalNodeAssemblerStrategyTest {
             node, terminal, Duration.ofSeconds(5), 0, 1024, new ParentEdgeInfo[0]);
     assembler.assemble(context);
 
-    StepVerifier.create(context.terminals().get(0)).verifyError(RuntimeException.class);
+    StepVerifier.create(context.terminals().getFirst()).verifyError(RuntimeException.class);
 
     verify(tracker, atLeastOnce())
         .emitTaskStatusEvent(eq(EXECUTION_ID), eq(NODE_ID), anyString(), eq("FAILURE"), any());
@@ -209,7 +221,7 @@ class TerminalNodeAssemblerStrategyTest {
     when(terminal.isBlocking()).thenReturn(true);
 
     final WorkflowNode node = new WorkflowNode(NODE_ID, "terminal", Map.of());
-    final AssemblyContext context = buildContext(NODE_ID, Flux.just(msg));
+    final AssemblyContext context = buildContext(Flux.just(msg));
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(Flux.just(msg));
@@ -220,7 +232,7 @@ class TerminalNodeAssemblerStrategyTest {
     assembler.assemble(context);
 
     assertThat(context.terminals()).hasSize(1);
-    StepVerifier.create(context.terminals().get(0)).verifyComplete();
+    StepVerifier.create(context.terminals().getFirst()).verifyComplete();
   }
 
   @Test
@@ -238,7 +250,7 @@ class TerminalNodeAssemblerStrategyTest {
     when(terminal.isBlocking()).thenReturn(false);
 
     final WorkflowNode node = new WorkflowNode(NODE_ID, "terminal", Map.of());
-    final AssemblyContext context = buildContext(NODE_ID, Flux.just(msg));
+    final AssemblyContext context = buildContext(Flux.just(msg));
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(Flux.just(msg));
@@ -249,7 +261,7 @@ class TerminalNodeAssemblerStrategyTest {
     assembler.assemble(context);
 
     final Mono<Void> terminalMono =
-        context.terminals().get(0).contextWrite(Context.of("resultCollector", collector));
+        context.terminals().getFirst().contextWrite(Context.of("resultCollector", collector));
 
     StepVerifier.create(terminalMono).verifyComplete();
 
@@ -269,7 +281,7 @@ class TerminalNodeAssemblerStrategyTest {
     when(terminal.isBlocking()).thenReturn(false);
 
     final WorkflowNode node = new WorkflowNode(NODE_ID, "terminal", Map.of());
-    final AssemblyContext context = buildContext(NODE_ID, Flux.just(msg));
+    final AssemblyContext context = buildContext(Flux.just(msg));
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(Flux.just(msg));
@@ -279,7 +291,7 @@ class TerminalNodeAssemblerStrategyTest {
             node, terminal, Duration.ofSeconds(5), 0, 1024, new ParentEdgeInfo[0]);
     assembler.assemble(context);
 
-    StepVerifier.create(context.terminals().get(0)).verifyComplete();
+    StepVerifier.create(context.terminals().getFirst()).verifyComplete();
   }
 
   @Test
@@ -296,7 +308,7 @@ class TerminalNodeAssemblerStrategyTest {
     };
     @SuppressWarnings("unchecked")
     final Flux<Message<?>>[] streams = new Flux[] {Flux.just(msg1), Flux.just(msg2), null};
-    final AssemblyContext context = buildContextWithStreams(NODE_ID, streams);
+    final AssemblyContext context = buildContextWithStreams(streams);
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(Flux.just(msg1, msg2));
@@ -324,7 +336,7 @@ class TerminalNodeAssemblerStrategyTest {
 
     @SuppressWarnings("unchecked")
     final Flux<Message<?>>[] streams = new Flux[2];
-    final AssemblyContext context = buildContextWithStreams(NODE_ID, streams);
+    final AssemblyContext context = buildContextWithStreams(streams);
 
     final NodeAssembler a1 =
         strategy.createAssembler(
@@ -351,7 +363,7 @@ class TerminalNodeAssemblerStrategyTest {
     when(terminal.isBlocking()).thenReturn(false);
 
     final WorkflowNode node = new WorkflowNode(NODE_ID, "terminal", Map.of());
-    final AssemblyContext context = buildContext(NODE_ID, Flux.just(msg));
+    final AssemblyContext context = buildContext(Flux.just(msg));
 
     when(streamTopologyDecorator.mergeParentStreams(any(), any(ParentEdgeInfo[].class)))
         .thenReturn(Flux.just(msg));
@@ -369,13 +381,12 @@ class TerminalNodeAssemblerStrategyTest {
   // ── helpers ───────────────────────────────────────────────────────────────
 
   @SuppressWarnings("unchecked")
-  private AssemblyContext buildContext(final String nodeId, final Flux<Message<?>> parentStream) {
+  private AssemblyContext buildContext(final Flux<Message<?>> parentStream) {
     final Flux<Message<?>>[] streams = new Flux[] {parentStream};
-    return buildContextWithStreams(nodeId, streams);
+    return buildContextWithStreams(streams);
   }
 
-  private AssemblyContext buildContextWithStreams(
-      final String nodeId, @SuppressWarnings("unchecked") final Flux<Message<?>>[] streams) {
+  private AssemblyContext buildContextWithStreams(final Flux<Message<?>>[] streams) {
     final ExecutionControl control =
         new ExecutionControl(
             SESSION_ID,
